# bigbasket-pipeline

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: lint.sh  run_tests.sh
src/: pyproject.toml
src/bigbasket/: data.py  models.py  train.py
tests/: test_data.py  test_models.py
