# Python project setup
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bigbasket"
version = "0.1.0"
description = "BigBasket Pipeline"
authors = [
    { name="Your Name", email="your_email@example.com" }
]
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn"
]
packages = ["bigbasket"]
